--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -31,6 +31,21 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Install Node.js for Mermaid CLI
+        uses: actions/setup-node@v3
+        with:
+          node-version: "14"
+
+      - name: Install Mermaid CLI
+        run: npm install -g @mermaid-js/mermaid-cli
+
+      - name: Install Python for Jupyter
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.9"
+
+      - name: Install Jupyter
+        run: pip install jupyter
       - name: Checkout
         uses: actions/checkout@v4
       - name: Setup Ruby
